recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:3: error: '(' expected but '<-' found.
  for <- 1 to 4 {
      ^FourSquare:8: error: illegal start of simple expression
} 
^